# cfglib

./: Cargo.toml  README.md  TODO.md
crates/cfglib/: Cargo.toml
crates/cfglib-dxbc/: Cargo.toml
crates/cfglib-dxbc/src/: lib.rs
crates/cfglib/src/: block.rs  builder.rs  cfg.rs  dataflow.rs  defuse.rs  dominator.rs  edge.rs  flow.rs  lib.rs  lift.rs  linearize.rs  liveness.rs  purity.rs  reaching.rs  region.rs  ssa.rs  structure.rs  test_util.rs  transform.rs
crates/cfglib/src/analysis/: alias.rs  expr.rs  metrics.rs  mod.rs  pattern.rs  profile.rs  switch_table.rs  tailcall.rs  valuenumber.rs
crates/cfglib/src/ast/: lift.rs  mod.rs  node.rs
crates/cfglib/src/dataflow/: abs_int.rs  constprop.rs  copyprop.rs  defuse.rs  fixpoint.rs  liveness.rs  memssa.rs  mod.rs  phi_web.rs  reaching.rs  sccp.rs  ssa.rs  ssa_destruct.rs
crates/cfglib/src/graph/: callgraph.rs  cdg.rs  diff.rs  dominator.rs  dot.rs  eh.rs  inc_dom.rs  interval.rs  loopnest.rs  mod.rs  pdg.rs  reducible.rs  reverse.rs  scc.rs  structure.rs  traverse.rs  verify.rs  visitor.rs
crates/cfglib/src/transform/: cleanup.rs  coloring.rs  contract.rs  critical.rs  dce.rs  loops.rs  mod.rs  pre.rs
