[workspace]
resolver = "3"
members = ["crates/cfglib", "crates/cfglib-dxbc"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/coconutbird/cfglib"
authors = ["coconutbird"]
rust-version = "1.85"
keywords = ["cfg", "control-flow", "compiler", "binary-analysis", "decompiler"]
categories = ["compilers", "no-std"]
