[package]
name = "cfglib-dxbc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SM4/SM5 shader bytecode CFG adapter for cfglib"
publish = false  # depends on git-only `dxbc` crate

[dependencies]
cfglib = { path = "../cfglib" }
dxbc = { git = "https://github.com/coconutbird/d3dasm", package = "dxbc" }
