[package]
name = "cfglib-dxbc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SM4/SM5 shader bytecode CFG adapter for cfglib"
keywords = ["dxbc", "shader", "cfg", "control-flow", "directx"]
categories = ["compilers", "no-std"]

[dependencies]
cfglib = { version = "0.1.0", path = "../cfglib" }
dxbc = "0.1.0"
