[package]
name = "cfglib"
version = "0.1.0"
edition = "2024"
description = "Generic control-flow graph library for binary analysis"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }
smallvec = { version = "1.15.1", default-features = false }
