[package]
name = "cfglib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic, no_std control-flow graph library for binary analysis, decompilation, and compiler infrastructure"
readme = "../../README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }
smallvec = { version = "1.15.1", default-features = false }
